--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "babel-loader": "^9.1.3",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "lodash": "^4.17.21",
+    "on-change": "^4.0.2",
+    "yup": "^1.3.2"
   }
 }
