--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.28.1",
     "html-webpack-plugin": "^5.5.3",
     "postcss-loader": "^7.3.3",
@@ -38,6 +39,7 @@
     "@popperjs/core": "^2.11.8",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.6.0",
     "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "yup": "^1.3.2"
