--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/yonamin/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/yonamin/frontend-project-11/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.0",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.2",
     "i18next": "^23.6.0",
